Fix article header alignment

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -33,6 +33,7 @@ nav {
 
 article h1 {
   margin-bottom: 4rem;
+  text-align: center;
 }
 
 pre[class*="language-"] {
